# MLOps

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  client.py  config.yaml  docker-compose.yaml  export_model.py  infer.py  main.py  pyproject.toml  run_server.py  train.py
.dvc/: config
assets/: scaler.pkl.dvc
conf/: data.yaml  export.yaml  infer.yaml  mlflow.yaml  model.yaml  train.yaml
data/: test.csv.dvc  train.csv.dvc
model_repository/ensemble-onnx/: config.pbtxt
model_repository/onnx-classifier/: config.pbtxt
model_repository/python-scaler/: config.pbtxt
model_repository/python-scaler/1/: model.py
notebooks/: data_prepare.ipynb
src/: dataset.py  model.py  pipelines.py  utils.py
weights/: .gitignore  best_model.pt.dvc
