[tool.poetry]
name = "mlops"
version = "0.1.0"
description = ""
authors = ["s.burovin <s.burovin@tinkoff.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.3.1"
torch = "^2.0.1"
pyyaml = "^6.0.1"
hydra-core = "^1.3.2"
matplotlib = "^3.8.0"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
